--- a/htmls/css/bfc3.3.html
+++ b/htmls/css/bfc3.3.html
@@ -20,4 +20,4 @@
 		</div>
 	</body>
 </html>
-<!-- 计算 BFC 的高度时，需要计算浮动元素的高度。 -->
+<!-- 计算 BFC 的高度时，需要计算浮动元素的高度。container如果不是bfc，那么因为他的子元素都是float，它就没有高度，就不变黑 -->
