--- a/htmlsMyTest/js/mybind.html
+++ b/htmlsMyTest/js/mybind.html
@@ -34,50 +34,21 @@
 			// // {value: 1, name: "Jack", age: 20}
 
 			Function.prototype.myBind = function (context) {
-				// 调用 bind 的不是函数，需要抛出异常
-				debugger;
 				if (typeof this !== 'function') {
-					throw new Error('Function.prototype.bind - what is trying to be bound is not callable');
+					throw new Error('type error');
 				}
-
-				// this 指向调用者
-				var fn = this;
-				// 实现第2点，因为第1个参数是指定的this,所以只截取第1个之后的参数
-				var args = [...arguments].slice(1);
-
-				// 创建一个空对象
-				var fNOP = function () {};
-
-				// 实现第3点,返回一个函数
-				// mybind函数的终极目的是得到一个可以直接执行的函数，所以把参数都送进去了
-				var fBound = function () {
-					// 实现第4点，获取调用 bind 的返回函数的参数 bindFoo2(20)的20
-					var bindArgs = [...arguments];
-					// 然后同传入参数合并成一个参数数组，并作为 self.apply() 的第二个参数
-					console.log(this instanceof fBound);
-					console.log(args.concat(bindArgs)); //args是调用bind时传的参数，放在前面
-					return fn.apply(this instanceof fBound ? this : context, args.concat(bindArgs)); //这里是传入了两个参数 args.concat(bindArgs)是第二个
-					// 注释1
-					// 当fBound作为普通函数时，this 指向 window ，此时结果为 false ，
-					// 将绑定函数的 this 指向 context
-					// 当fBound作为构造函数时，this 指向实例，此时this instanceof fBound结果为 true
-					// 可以让实例获得来自绑定函数的值，即上例中实例会具有 habit 属性。
+				let args = [...arguments].slice(1); //这里需要slice的原因是，context会是第一个参数
+				let fn = this; //这里多一个保存下this 因为之后要通过apply，让它指向context
+				let funcNull = function () {};
+				let funcBind = function () {
+					let newArgs = [...arguments]; //这里因为参数是空，所以不需要slice
+					let res = fn.apply(this instanceof funcBind ? this : context, args.concat(newArgs));
+					return res;
 				};
-
-				// 注释2
-				// 修改返回函数的 prototype 为绑定函数的 prototype，实例就可以继承绑定函数的原型中的值，
-				// 即上例中 obj 可以获取到 bar 原型上的 friend
-				// 至于为什么使用一个空对象 fNOP 作为中介，把 fBound.prototype 赋值为空对象的实例
-				// （原型式继承），这是因为直接 fBound.prototype = this.prototype 有一个缺点，
-				// 修改 fBound.prototype 的时候，也会直接修改 this.prototype
-
-				// 空对象的原型指向绑定函数的原型
-				fNOP.prototype = this.prototype;
-				// 空对象的实例赋值给 fBound.prototype
-				fBound.prototype = new fNOP();
-				return fBound;
+				funcNull.prototype = this.prototype;
+				funcBind.prototype = new funcNull();
+				return funcBind;
 			};
-
 			// 简易写法 之后分析是否正确
 			// Function.prototype.myBind = function (context) {
 			// 	// 判断调用对象是否为函数
@@ -97,7 +68,7 @@
 			// };
 
 			//测试1
-			debugger;
+			// debugger;
 			let value1 = 2;
 			let foo1 = {
 				value1: 1,
