--- a/htmlsMyTest/js/mycall.html
+++ b/htmlsMyTest/js/mycall.html
@@ -31,33 +31,19 @@
 			// obj.fn();
 			// delete obj.fn;
 			Function.prototype.myCall = function (context) {
-				// 判断调用对象 myCall是Function的原型对象的属性了，
-				//外部函数调用myCall时，外部函数是function，所以this指向外部函数
-
-				//注意！外部函数调用myCall，context是调用时传入的参数，就是obj
-
+				//this指向函数 context指向等待绑定的对象
 				if (typeof this !== 'function') {
-					throw new Error('Type error');
+					throw new Error('Type Error');
 				}
-				// 首先获取参数
-				console.log(arguments);
 				let args = [...arguments].slice(1);
-				let result = null;
-				//这种写法用于为变量提供一个默认值
-				// 判断 context 是否传入，如果没有传就设置为 window
-				if (!context) context = window;
-				// context = context || window;
-				// 将被调用的方法设置为 context 的属性
-				// this 即为我们要调用的方法
-				// 使用symbol避免和原来存在的属性名重复
-				const fnSymbol = Symbol();
-				context[fnSymbol] = this;
-				// 执行要被调用的方法
-				result = context[fnSymbol](...args); //把列表解包
-				// 删除手动增加的属性方法
-				delete context[fnSymbol];
-				// 将执行结果返回
-				return result;
+				if (!context) {
+					context = window;
+				}
+				const symbol1 = Symbol(); //这里不是new Symbol()
+				context[symbol1] = this;
+				let res = context[symbol1](...args);
+				delete context[symbol1]; //记得删除
+				return res;
 			};
 
 			//测试
