--- a/htmlsMyTest/js/防抖.html
+++ b/htmlsMyTest/js/防抖.html
@@ -32,7 +32,7 @@
 			// 	setUseAction.cancel();
 			// });
 			function debounce(func, wait, immediate) {
-				let timeout, result;
+				let timeout, context, args, result;
 				let debounced = function () {
 					let args = arguments; //取参数
 					let context = this; //取绑定这个函数的dom
@@ -46,7 +46,7 @@
 						}, wait); //wait后把timeout重置为null，并立刻生成当前timeout
 						if (callNow) result = func.apply(context, args);
 					} else {
-						setTimeout(function () {
+						timeout = setTimeout(function () {
 							func.apply(context, args);
 						}, wait);
 					}
@@ -55,6 +55,31 @@
 				debounced.cancel = function () {
 					clearTimeout(timeout);
 					timeout = null;
+				};
+				return debounced;
+			}
+			function debounce(func, wait, immediate) {
+				let args, context, res, timeout;
+				let debounced = function () {
+					context = this;
+					args = arguments;
+					if (timeout) {
+						clearTimeout(timeout);
+					}
+					if (immediate) {
+						let callNow = !timeout;
+						timeout = setTimeout(() => {
+							timeout = null;
+						}, wait);
+						if (callNow) {
+							res = func.apply(context, args);
+						}
+					} else {
+						timeout = setTimeout(() => {
+							func.apply(context, args);
+						}, wait);
+					}
+					return res;
 				};
 				return debounced;
 			}
