--- a/htmls/css/双飞翼布局.html
+++ b/htmls/css/双飞翼布局.html
@@ -17,6 +17,7 @@ margin-left去调节float的位置
 			}
 			#main-wrap {
 				margin: 0 190px 0 290px;
+				/* 一般出错就错在margin上了，多检查margin */
 			}
 			#left {
 				width: 290px;
