--- a/htmlsMyTest/css/双飞翼布局.html
+++ b/htmlsMyTest/css/双飞翼布局.html
@@ -3,41 +3,39 @@
 	<head>
 		<title>Box Model Comparison</title>
 		<style type="text/css">
+			#center {
+				height: 200px;
+				width: 100%;
+				background-color: rgb(200, 164, 18);
+			}
 			.float {
 				float: left;
-				/* 如果多个盒子都设置了浮动，则它们会按照属性值一行内显示并且顶端对齐排列。
-浮动的元素是互相贴靠在一起的（不会有缝隙），如果父级宽度装不下这些浮动的盒子，多出的盒子会另起一行对齐。
-margin-left去调节float的位置
-默认宽度由内容决定，同时支持指定高宽，盒子之间无空隙 */
 			}
-			#main {
+			#center-wrap {
+				height: 100%;
 				width: 100%;
-				height: 200px;
-				background-color: lightpink;
-			}
-			#main-wrap {
-				margin: 0 190px 0 290px;
+				margin-left: 200px;
+				margin-right: 150px;
 			}
 			#left {
-				width: 290px;
+				width: 200px;
 				height: 200px;
-				background-color: lightsalmon;
+				background-color: cyan;
 				margin-left: -100%;
 			}
 			#right {
-				width: 190px;
+				width: 150px;
 				height: 200px;
-				background-color: lightskyblue;
-				margin-left: -190px;
+				background-color: darkorange;
+				margin-left: -150px;
 			}
 		</style>
 	</head>
+	<div id="center" class="float">
+		<div id="center-wrap">center</div>
+	</div>
+	<div id="left" class="float">left</div>
+	<div id="right" class="float">right</div>
 
-	<body>
-		<div id="main" class="float">
-			<div id="main-wrap">main</div>
-		</div>
-		<div id="left" class="float">left</div>
-		<div id="right" class="float">right</div>
-	</body>
+	<body></body>
 </html>
