--- a/htmlsMyTest/js/mybind.html
+++ b/htmlsMyTest/js/mybind.html
@@ -34,21 +34,20 @@
 			// // {value: 1, name: "Jack", age: 20}
 
 			Function.prototype.myBind = function (context) {
-				if (typeof this !== 'function') {
-					throw new Error('type error');
-				}
-				let args = [...arguments].slice(1); //这里需要slice的原因是，context会是第一个参数
-				let fn = this; //这里多一个保存下this 因为之后要通过apply，让它指向context
-				let funcNull = function () {};
-				let funcBind = function () {
-					let newArgs = [...arguments]; //这里因为参数是空，所以不需要slice
-					let res = fn.apply(this instanceof funcBind ? this : context, args.concat(newArgs));
-					return res;
+				let args = [...arguments].slice(1);
+				let func = this;
+				let fNop = function () {};
+				let resFunc = function () {
+					let bindArgs = [...arguments];
+					args = args.concat(bindArgs);
+					return func.apply(this instanceof resFunc ? this : context, args);
 				};
-				funcNull.prototype = this.prototype;
-				funcBind.prototype = new funcNull();
-				return funcBind;
+				fNop.prototype = this.prototype;
+				resFunc.prototype = new fNop();
+				return resFunc;
 			};
+
+			//
 			// 简易写法 之后分析是否正确
 			// Function.prototype.myBind = function (context) {
 			// 	// 判断调用对象是否为函数
